<resources>
    <string name="app_name">PrivatCurrency</string>

    <string name="hello_world">0000</string>
    <string name="action_settings">Settings</string>


    <string name="batteryInfo">4000</string>
    <string name="voltage_widget_shared_pref">com.voidgreen.voltagewidget</string>
    <string name="battery_info_shared_pref_key">battery info</string>
    <string name="pref_text_size_key">text size</string>
    <string name="pref_text_size_title">Text size</string>

    <string name="pref_update_period_key">update period</string>
    <string name="pref_update_period_title">Update period</string>

    <string name="pref_text_color_key">text color</string>
    <string name="pref_text_color_title">Text color</string>

    <string name="pref_apply_button_key">apply button</string>
    <string name="pref_apply_button_title">Apply settings</string>

    <string name="pref_exchange_type_key">exchangeType</string>
    <string name="pref_exchange_type_title">Exchange type</string>

    <!-- Color picker-->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>


    <string name="emtyViewText">loading...</string>
    <string name="connectionProblem">Connetion problem</string>

    <string name="item10m">10 minutes</string>
    <string name="item1h">1 hour</string>
    <string name="item3h">3 hours</string>
    <string name="item6h">6 hours</string>
    <string name="item12h">12 hours</string>
    <string name="item24h">24 hours</string>

    <string name="itemCard">Card</string>
    <string name="itemCash">Cash</string>

    <string name="widgetSettings">WIDGET SETTINGS</string>
    <string name="applyButtonText">SAVE SETTINGS</string>

    <string name="currencyHeader">Currency</string>
    <string name="currencyBaseHeader">Base</string>
    <string name="bidHeader">BID</string>
    <string name="askHeader">ASK</string>


</resources>
