<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="TEXT SETTINGS">
        <com.voidgreen.privatcurrency.colorpickerpreference.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/white"
            android:key="@string/pref_text_color_key"
            android:summary="Choose text color"
            android:title="@string/pref_text_color_title" />
        <ListPreference
            android:defaultValue="720"
            android:dialogTitle="@string/pref_update_period_title"
            android:entries="@array/updtateTime"
            android:entryValues="@array/updtateTimeValues"
            android:key="@string/pref_update_period_key"
            android:summary="@string/item12h"
            android:title="@string/pref_update_period_title" />
        <ListPreference
            android:defaultValue="@string/itemCash"
            android:dialogTitle="@string/pref_exchange_type_title"
            android:entries="@array/exchangeType"
            android:entryValues="@array/exchangeTypeValues"
            android:key="@string/pref_exchange_type_key"
            android:summary="@string/itemCash"
            android:title="@string/pref_exchange_type_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="SAVE CONFIGURATION">
        <Preference
            android:key="@string/pref_apply_button_key"
            android:layout="@layout/preference_button" />
        />
    </PreferenceCategory>
</PreferenceScreen>